Fixed overflow: hidden on mobile menu

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -244,6 +244,7 @@
 		}
 
 		ul {
+			overflow: hidden;
 
 			ul {
 				left: 0;
